@@ -19,7 +19,7 @@ jobs:
         include:
           - target:
               os: linux
-            builder: ubuntu-18.04
+            builder: ubuntu-22.04
             shell: bash
 
     defaults:
